# llmd

./: .gitignore  DCS-AUTO v0.1.md  LLMD Compiler Design v0.1.llmd  LLMD Compiler Design v0.1.md  LLMD Compiler Design v0.2.llmd  LLMD Compiler Design v0.2.md  LLMD Dictionary Compression System (DCS) v1.0.md  LLMD Specification - v0.1.llmd  LLMD Specification - v0.1.md  LLMD Specification - v0.2.llmd  LLMD Specification - v0.2.md  LLMD v0.1 — Pathline Protocol Specification.md  README.llmd  README.md
.architecture/: ARCHITECTURE.llmd  ARCHITECTURE.md
.claude/: settings.local.json
config/: auto_config.json  llmdc.config.json
corpora/samples/: api-spec.llmd  api-spec.md  deployment-guide.llmd  deployment-guide.md  fluentlm-components.llmd  fluentlm-components.md
corpora/schemas/: AdaptiveCardSchema.json  AdaptiveCardSchema.llmd
dict/: llmd-core.dict.json
docs/: bench.llmd  bench.md  dcs-auto.llmd  dcs-auto.md  llmdc.llmd  llmdc.md  schema2llmd.llmd  schema2llmd.md  validate-dict.llmd  validate-dict.md
schema/: llmd-dcs-dictionary.schema.json
tools/: bench.ps1  bench.sh
tools/js/: README.llmd  README.md  bench.js  dcs_auto.js  llmdc.js  package.json  schema2llmd.js  validate-dict.js
tools/py/: README.llmd  README.md  bench.py  dcs_auto.py  llmdc.py  schema2llmd.py  validate_dict.py
tools/rust/: Cargo.toml  README.md
tools/rust/src/: blocks.rs  compress.rs  config.rs  emit.rs  inline.rs  ir.rs  lib.rs  main.rs  normalize.rs  parse.rs  postprocess.rs  scope.rs
tools/rust/tests/: integration.rs
