[package]
name = "llmdc"
version = "0.1.0"
edition = "2021"
description = "LLMD Compiler — compile Markdown to LLMD format"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2"
regex = "1"
fancy-regex = "0.14"
unicode-normalization = "0.1"
